# pyspy

./: .claude_code_plan  .env.example  .gitignore  CUSTOM_PROMPTS_GUIDE.md  ELECTRON_APP_INTEGRATION.md  INTERVIEW_COACH.md  INTERVIEW_COACH_SYSTEM_PROMPT.md  MCP_INTEGRATION.md  MERGE_COMPLETION_SUMMARY.md  MERGE_STATUS.md  MERGE_SUMMARY.md  PROMPT_ROUTING_ARCHITECTURE.md  QUICKSTART.md  README_INTERVIEW_COACH.md  README_VOICE_TO_CODE.md  STAGE_7_SUMMARY.md  STAGE_8_TEST_RESULTS.md  TECHNICAL_KB_STRATEGY_SUMMARY.txt  TESTING_CHECKLIST.md  WEB_VIEWER_README.md  claude_desktop_config.json  config.py  expert.todo.txt  gemini_code_gen.md  gemini_mcp_client.py  knowledge_base_config.json  llm_router.py  main.py  mcp_server.py  merge_claude_mcp.todo.txt  overlay_viewer.py  pyproject.toml  requirements.txt  requirements_mcp.txt  test_audio_devices.py  test_electron_integration.py  test_interview_coach.py  test_interview_coach_e2e.py  test_loopback.py  test_stage_8_1.py  (+11 more)
.claude/: settings.local.json
electron-overlay/: README.md  custom_prompts.js  main.js  overlay.html  package.json  preload.js  screenshot.html  transcript_output.html  transcription_window.html
interview_coach/: __init__.py  bm25_index.py  document_loader.py  embedding_index.py  retrieval_engine.py  transcript_archiver.py
prompts/: gemini_code_gen.md  interview_coach.md
